# ubpf

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  MEMSX_BPF_CONFORMANCE.md  README.md  annotated.html  bpf_conformance_memsx.patch  classes.html  dir_93effe02d2e8dd09437fb49d0adaddf7.html  dir_cf6c78462b393272f91793a3a49557d3.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  mainpage.dox  mainpage_8dox.html  menudata.js  requirements.txt  structubpf__safe__helper__descriptor.html  structubpf__safe__region.html  test_memsx  test_memsx.c  ubpf_8h.html  ubpf_8h_source.html
.copilot/: project.json
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: build-libbpf.sh
.github/skills/adversarial-branch-review/: SKILL.md
.github/skills/bootstrap/: SKILL.md
.github/workflows/: arm64.yml  fuzzing.yml  main.yml  posix.yml  scorecards.yml  udpate-docs.yml  update-docs.yml  windows.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/vm/: Makefile  cmake_install.cmake
bench/: add.c  crc32.c  search.c
bpf/: CMakeLists.txt
build-tests/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json
build-tests/aarch64_test/: CTestTestfile.cmake  cmake_install.cmake
build-tests/bpf/: CTestTestfile.cmake  cmake_install.cmake
build-tests/custom_tests/: CTestTestfile.cmake  cmake_install.cmake
build-tests/ubpf_plugin/: CTestTestfile.cmake  cmake_install.cmake
build-tests/vm/: CTestTestfile.cmake  cmake_install.cmake
build_arm64_check/: CMakeCache.txt
cmake/: mips64.cmake  options.cmake  settings.cmake  test_support.cmake
compat/macOS/: elfdefinitions.h  gelf.h  libelf.h
custom_tests/: CMakeLists.txt
custom_tests/data/: ubpf_test_readonly_bytecode.input
custom_tests/descrs/: ubpf_test_constant_blinding.md  ubpf_test_default_dispatcher_simple_context.md  ubpf_test_elf_unrelocated_local_call.md  ubpf_test_large_program.md  ubpf_test_max_insts_api.md  ubpf_test_readonly_bytecode.md  ubpf_test_reload_code_memleak.md  ubpf_test_safe_profile_compile_rejection.md  ubpf_test_safe_profile_helpers.md  ubpf_test_safe_profile_pointer_arithmetic.md  ubpf_test_safe_profile_spills_and_local_calls.md
custom_tests/srcs/: test_helpers.h  ubpf_custom_test_support.h  ubpf_test_constant_blinding.cc  ubpf_test_custom_local_function_stack_size.cc  ubpf_test_custom_local_function_stack_size_unaligned.cc  ubpf_test_custom_local_function_stack_size_zero.cc  ubpf_test_debug_function.cc  ubpf_test_default_dispatcher_simple_context.cc  ubpf_test_default_local_function_stack_size.cc  ubpf_test_elf_unrelocated_local_call.cc  ubpf_test_external_stack_contents.cc  ubpf_test_frame_pointer.cc  ubpf_test_large_program.cc  ubpf_test_max_insts_api.cc  ubpf_test_readonly_bytecode.cc  ubpf_test_reload_code_memleak.cc  ubpf_test_safe_profile_compile_rejection.cc  ubpf_test_safe_profile_helpers.cc  ubpf_test_safe_profile_pointer_arithmetic.cc  ubpf_test_safe_profile_spills_and_local_calls.cc
custom_tests/windows/: test.cmd
docs/: VerifiedPrograms.md  platform-specific-compilation.md
docs/specs/: audit-report.md  design.md  isa-reconciliation.md  jit-arm64.md  jit-mips.md  jit-x86-64.md  requirements.md  validation.md
libfuzzer/: CMakeLists.txt  README.md  libfuzz_harness.cc  libfuzzer_config.h.inc  run_corpus.py
mips64_test/: run-interpret.sh  run-jit.sh
scripts/: format-code
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js
test_framework/: test_assembler.py  test_jit.py  test_vm.py
tests/: README.md  bswap16.data  bswap32.data  bswap64.data  call-local-tail-jump.data  call0.data  call_gatherbytes.data  callx_gather.data  err-address-overflow-offset.data  err-address-underflow.data  err-call0.data  err-integer-overflow-bounds.data  err-lddw-map-fd.data  ja32.data  jit-bounds-check-oob-read.data  jit-bounds-check-oob-write.data  jit-bounds-check-stack-valid.data  lddw-map-fd.data  ldxbsx-positive.data  ldxbsx.data  ldxhsx-positive.data  ldxhsx.data  ldxsb.data  ldxsh-positive.data  ldxsh.data  ldxsw-positive.data  ldxsw.data  ldxwsx-positive.data  ldxwsx.data  sdiv-by-zero-imm.data  sdiv32-by-zero-reg.data  sdiv32-by-zero.data  sdiv32-high-divisor.data  sdiv32-imm.data  sdiv32-neg.data  sdiv32-overflow.data  sdiv32-reg.data  sdiv32.data  sdiv64-by-zero-imm.data  sdiv64-by-zero-reg.data  (+11 more)
tests/errors/: err-address-overflow-offset.data  err-call-invalid-jump.data  err-call-tail-conditional.data  err-lddw-second-half-invalid-all.data  err-lddw-second-half-invalid-dst-offset.data  err-lddw-second-half-invalid-offset.data  err-lddw-second-half-invalid-src-offset.data  err-lddw-second-half-invalid-src.data  err-lddw-second-half-invalid.data
ubpf/: asm_parser.py  assembler.py  disassembler.py
ubpf_plugin/: CMakeLists.txt  test_helpers.h  ubpf_plugin.cc
unit_tests/: CMakeLists.txt  bpf_assembler.cc  bpf_assembler.h  code_gen_tests.cc  ubpf_unit_test.cc
vm/: CMakeLists.txt  Makefile  ebpf.h  test.c  ubpf_inst_cnt.c  ubpf_instruction_valid.c  ubpf_int.h  ubpf_jit.c  ubpf_jit_arm64.c  ubpf_jit_mips64.c  ubpf_jit_support.c  ubpf_jit_support.h  ubpf_jit_x86_64.c  ubpf_jit_x86_64.h  ubpf_loader.c  ubpf_safe.c  ubpf_vm.c
vm/inc/: ubpf.h
workflows/: README.md  bootstrap-specs.md  coder-prompt.md  evolve-specs.md  generate-jit-mips64r6-prompt.md  maintain-specs.md  orchestrator.md  reconcile-isa-requirements.md  reviewer-prompt.md  validator-prompt.md
(+15 files in other folders)
